<resources>
    <string name="kisah">Nabi Nuh (bahasa Arab: نُوح‎ Nūḥ) adalah seorang nabi dan rasul yang diutus oleh Allah kepada umat manusia sebelum terjadinya sebuah malapetaka dahsyat yang hampir memusnahkan kehidupan di muka bumi, nabi Nuh dikenal sebagai pendiri serta penghuni bahtera sewaktu kejadian banjir bah melanda seisi bumi nabi Nuh termasuk dalam golongan Rasul Ulul Azmi.
        Nama nabi Nuh disebut sebanyak 43 kali dalam kitab Al-Quran serta diabadikan sebagai nama sebuah surah yaitu Surah Nuh.\n</string>
    <string name="kisah3">Nabi Musa adalah seorang rasul dan nabi pilihan Allah yang diutus menghadap kepada kaum Firaun, serta diutus membebaskan Bani Israel menghadapi penindasan bangsa Mesir. nabi Musa dikenal sebagai perantara dalam hal pengajaran agama dan pengampunan dosa untuk Bani Israel. Musa bergelar Kalimullah (seseorang yang berbicara dengan Allah).
        Nabi Musa merupakan figur yang paling sering disebut di kitab Al-Quran, yakni sebanyak 136 kali serta termasuk golongan Rasul Ulul Azmi.\n
        Musa dilahirkan di negeri Mesir sewaktu Bani Israel tinggal sebagai bangsa pendatang sejak zaman Nabi Yusuf. Imran dan Yukhabad merupakan kedua orang tua Musa yang berasal dari Suku Lawy. Nabi Musa merupakan adik kandung Nabi Harun dan Miryam.\n</string>
    <string name="subkisah">Genealogi</string>
    <string name="subkisah2">Kelahiran Nabi Musa</string>
    <string name="subkisah3">Kehidupan di Istana Mesir</string>
    <string name="kisahlanjut">\nDalam periwayatan agama Islam, nabi Nuh merupakan Rasul ketiga sesudah nabi Adam, dan nabi Idris. Ia termasuk dalam generasi kesepuluh umat manusia atau keturunan kesembilan dari nabi Adam melalui nabi Syits, nabi Nuh adalah putra Lamik bin Mutawasylah bin Idris bin Yarid bin Mahlail bin Qainan bin Ainusyi bin Syits bin Adam.</string>
    <string name="kisahlanjut3">\nSebelum nabi Musa lahir, seluruh anggota keluarga nabi Yaqub tinggal sebagai masyarakat pendatang di negeri Mesir. Selama masa kekuasaan nabi Yusuf, Bani Israel dilimpahi banyak kemudahan hidup. Akan tetapi keadaan mulai berubah sepeninggal nabi Yusuf, oleh sebab raja yang menggantikan Yusuf tidak memiliki pengetahuan dan pengalaman hidup dengan bangsa Bani Israel.
        Bangsa ini diperbudak oleh Mesir lantaran raja Firaun pada zaman itu merupakan raja yang zalim serta memecah belah rakyatnya melalui tindakan menindas kalangan yang dipandang lemah.\n
        Tatkala raja Firaun mendapati sebuah mimpi yang mengguncangkan; seorang ahli tafsir mimpi memahami makna mimpi tersebut sebagai pertanda buruk bagi kekuasaan raja Firaun bahwa akan ada seorang anak laki-laki dari Bani Israel yang menjadi seorang laki-laki gagah perkasa yang kelak memimpin golongan pengikutnya melawan kekuasaan Mesir serta membawa berbagai kehancuran hebat di negeri Mesir;
        juga para pengikut orang tersebut akan mengangkut harta kekayaan yang berlimpah disertai bantuan kekuatan milik musuh Mesir lalu menumpas seluruh kaum pemuka di bangsa Mesir pula. Raja Firaun beserta seluruh pemuka kaumnya merasa ketakutan bahwa penafsiran mimpi itu bermakna bahwa Bani Israel kelak bersekutu dengan musuh Mesir untuk menghancurkan negeri Mesir.
        Pada saat bersamaan, jumlah lelaki di Bani Israel bertambah pesat sehingga kaum raja Firaun tidak bisa memperkirakan siapakah anak yang diramalkan itu. Maka diadakan sebuah perintah keji di Mesir bahwa seluruh anak laki-laki yang baru lahir harus dibunuh, sedangkan seluruh anak perempuan yang baru lahir boleh dibiarkan hidup.\n
        Namun terdapat seorang bangsawan di istana raja Firaun yang menyarankan supaya tidak berupaya melawan ketetapan tersebut melainkan tunduk menjadi pengikut orang Bani Israel tersebut, agar seisi istana raja Firaun tidak turut dilenyapkan. Walaupun demikian, Raja Firaun justru berlaku sombong seraya sewenang-wenang mendakwakan diri sebagai dewa atas bangsa Mesir:
        "Haruskah dewa sehebat diriku tunduk berpasrah terhadap seorang manusia dari kalangan yang diperbudak oleh kaum kita sendiri?" kemudian raja Firaun membujuk para pengikutnya melaksanakan perintah keji ini.\n
        Mendengar kabar tentang perintah keji raja Firaun, Imran merasa sangat gelisah tentang keselamatan anak yang dikandung Yukhabad istrinya. Kedua anak Imran Harun dan Miryam memberi tanggapan tentang kejadian ini. Miryam sebagai seorang nabiah, mendapati pertanda nubuat bahwa seorang anak laki-laki akan dilahirkan ibunya dan anak itu akan mengalami kejadian hebat dalam perairan,
        sehingga Miryam menyarankan supaya anak tersebut diletakkan ke sebuah perairan atau sungai oleh sebab Miryam meyakini akan ada keajaiban Allah yang akan menyelamatkan anak itu menghadapi air. Akan tetapi Imran merasa khawatir bahwa nubuat yang disampaikan oleh putrinya itu tidak terwujud. Harun, yang juga merupakan seorang nabi, menyampaikan saran supaya sang ibu ditempatkan di tempat yang aman,
        supaya anak tersebut dapat dilahirkan dalam keadaan tenang sementara seluruh anggota keluarga yang lain berpuasa serta berdoa secara bersungguh-sungguh demi keselamatan anak tersebut kemudian berpasrah menyerahkan nasib anak tersebut kepada Allah, oleh sebab itu nabi Harun meyakini bahwa Allah sanggup menghadirkan sesosok malaikat yang selalu menyertai anak tersebut supaya kembali di tengah-tengah mereka dalam keadaan selamat.
        Imran merasa tentram ketika mendengar ucapan bijaksana Harun, sehingga Imran menempatkan Yukhabad bersama Miryam di sebuah gua supaya berlindung hingga hari bersalin.\n
        Setelah Yukhabad melahirkan seorang anak laki-laki; tepat sebagaimana pertanda yang telah diperoleh Miryam, ia merasa sangat bahagia sekaligus tak tega apabila harus menyerahkan putranya kepada kaum Firaun. Miryam merasa bergembira bahwa pertanda nubuat yang diperoleh merupakan kebenaran lalu Miryam bersegera memberitahu ayahnya dan Harun, supaya berdoa demi keselamatan anak laki-laki ini.
        Sementara itu, Yukhabad berada dalam kegelisahan antara menyerahkan sang putra kepada pemuka kaum Firaun atau menuruti anjuran Miryam untuk menempatkan sang anak ke dalam wilayah perairan, Yukhabad berdoa seraya menangis untuk menentukan nasib anaknya. Maka Allah mewahyukan kepada Yukhabad, supaya menenangkan diri lalu meletakkan anak tersebut ke dalam sebuah tabut kemudian menempatkan tabut itu menuju sebuah sungai seraya mempercayakan nasib anak tersebut kepada Yang Maha Melindungi.
        Yukhabad menempatkan sang anak dalam sebuah tabut yang ia temukan lalu melepas tabut itu sambil berdoa supaya Allah selalu menjaga keselamatan anak tersebut agar kembali kepada keluarganya, seraya supaya kelak diperkenan sebagai hamba yang berbakti kepada Allah.\n
        Yukhabad mengakui bukti kebenaran pertanda nubuat Miryam lalu menyuruh gadis itu mengikuti ke mana tabut akan menepi. Miryam pun mendapati dari kejauhan sewaktu istri Firaun sedang menarik tubuh adiknya dari perairan seraya wanita itu berkata "Musa, Musa." Miryam menduga hal ini merupakan pertanda buruk sehingga ia khawatir tentang keselamatan Musa. Miryam bersegera mendekat ke tengah kerumunan wanita yang hendak menyusui Musa, supaya memastikan apa yang akan terjadi pada sang adik.
        Tatkala Musa tidak mau menerima penyusuan dari siapapun; Miryam menyadari bahwa hal ini merupakan cara Allah untuk mengembalikan Musa ke ibu kandungnya, kemudian Miryam menawarkan bantuan supaya menghadirkan seorang wanita yang sanggup menyusui Musa. Ketika Yukhabad dipertemukan kembali dengan anaknya, perasaan sang ibu menjadi lega dan bersyukur bahwa Allah telah memenuhi janji tentang Musa; sehingga Yukhabad dapat mengasuh Musa, putra kandungnya.\n</string>
    <string name="kisahdakwah">\nSebelum mendapat tugas kerasulan,nabi Nuh merupakan seorang yang tekun, gemar bersyukur, dan beriman kepada Allah. Sementara itu, sebagian besar umat manusia di zamannya merupakan orang-orang kafir yang menganggap kedudukan sang nabi tidak lebih terhormat dibanding diri mereka.
        Kaum kafir tersebut tidak mau memandang nabi Nuh sebagai sosok nabi oleh sebab mereka mempunyai lebih banyak harta maupun anak-anak, Menghadapi tantangan semacam ini,nabi Nuh tetap bertekun menyampaikan risalah Allah supaya kaumnya beriman kepada Allah serta supaya kaumnya meninggalkan penyembahan dewa-dewa,
        selain itu nabi Nuh memperingatkan adanya ancaman dari Allah bahwa akan ada malapetaka dahsyat apabila kaum tersebut tidak mau meninggalkan kebiasaan keji yang diwarisi dari para leluhur. Kaum yang dihadapi nabi Nuh merupakan salah satu generasi manusia yang diberi umur panjang serta dilimpahi kemakmuran juga dianugerahi perawakan tubuh yang jauh lebih perkasa daripada generasi manusia pada zaman sekarang.
        Kemakmuran duniawi di generasi nabi Nuh menimbulkan sikap angkuh serta sikap sewenang-wenang memandang diri sebagai golongan terkuat dan berkuasa, yang kemudian berujung pada keengganan serta kecongkakan untuk mengakui Tuhan sebagai Yang Maha Kuasa maupun Yang lebih berwenang atas hidup mereka. Allah menyebut kaum nabi Nuh sebagai kaum paling rusak di muka bumi.
        Nabi Nuh sangat bertekun untuk mendakwahkan risalah Allah ke berbagai tempat di muka bumi. Baik siang dan malam,nabi Nuh berkeliling sambil berdakwah kepada kaumnya agar bersedia menuruti ajaran Allah yang disampaikan melalui dirinya. Tetapi kaum itu tidak menerima risalah-risalah tersebut, bahkan kaum itu menuduh Nuh sebagai seorang pendusta.
        Hal ini membuat sang nabi berupaya dengan cara sembunyi-sembunyi untuk mengajak banyak orang menuruti risalah Allah. Walaupun demikian, kaum nabi Nuh justru menuduh ia merasa iri terhadap kemewahan dan kekayaan mereka sehingga nabi Nuh dianggap membutuhkan harta benda mereka; akan tetapi nabi Nuh menegaskan bahwa ia sama sekali tidak menghendaki uang mereka sebagai upah sebab upahnya berasal dari Allah.
        Kaum kafir itu tetap berkeras melakukan tindakan keji, meski ada nabi yang berdakwah di tengah-tengah mereka.</string>
    <string name="kisahdakwah3">\nSetelah beberapa waktu, Musa dijadikan sebagai anak angkat oleh istri Firaun serta Musa bergelar seorang pangeran negeri Mesir. Ia belajar di istana Mesir untuk mewarisi Ilmu-Ilmu khusus beserta Hikmah-Hikmah berharga yang ditinggalkan Nabi Yusuf, salah seorang putra Nabi Yaqub, yang sebelumnya menjadi penguasa di negeri Mesir. Musa secara mudah menyerap berbagai Ilmu yang dikhususkan bagi hamba-hamba pilihan Allah.
        Musa tidak seperti para pemuka kaum Firaun yang tidak mengimani Allah sehingga kaum pemuka Firaun mengalami kesulitan untuk memahami peninggalan berharga ini. Mewarisi Hikmah-Hikmah Yusuf, sosok Musa yang masih muda memiliki kebijaksanaan mengungguli kaum tetua di Mesir.\n
        Seisi istana raja Firaun merasa heran terhadap Musa yang sanggup menyingkapkan berbagai perkara rumit sebagaimana kemampuan istimewa nabi Yusuf, sehingga kaum Firaun mulai menduga bahwa Musa merupakan anak laki-laki yang pernah diramalkan. Akan tetapi salah seorang pemuka dalam kaum Firaun menyatakan bahwa perlu ada pembuktian tentang kebenaran dugaan ini. Pemuka itu menyuruh Musa supaya memilih antara bara api yang panas atau batu permata.
        Tatkala Musa memilih bara api, kaum Firaun meyakini bahwa Musa bukanlah orang yang diramalkan. Setelah itu, Musa tidak lagi dihadirkan di tengah-tengah para pemuka kaum Firaun sebab mereka merasa malu apabila raja Firaun yang telah mengaku dewa kemudian dipimpin oleh Musa, berbeda dengan Raja Mesir terdahulu yang bersedia dipimpin oleh nabi Yusuf.</string>
    <string name="bacalanjutan">
    <a href="https://id.wikipedia.org/wiki/Nabi_Nuh">https://id.wikipedia.org/wiki/Nabi_Nuh</a> </string>
    <string name="bacalanjutan3">
    <a href="https://id.wikipedia.org/wiki/Nabi_Musa">https://id.wikipedia.org/wiki/Nabi_Musa</a> </string>
    <string name="ululazmi">Nabi Ulul Azmi</string>
    <string name="nuh">Nabi Nuh AS</string>
    <string name="musa">Nabi Musa AS</string>
</resources>