<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".nabi.Nuh">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="16dp"
        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nuh"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:textColor="@color/logoblack"
                    android:textStyle="bold"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:orientation="vertical"
                    >
                    <ImageButton
                        android:layout_width="match_parent"
                        android:layout_height="220dp"
                        android:background="@null"
                        android:scaleType="fitCenter"
                        android:src="@drawable/nuh"
                        android:text="@string/ululazmi"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/kisah"
                        android:textSize="15sp"
                        android:textStyle="normal"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/subkisah"
                        android:textColor="@color/logoblack"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/kisahlanjut"
                        android:textSize="15sp"
                        android:textStyle="normal"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:text="\nDakwah Nabi Nuh"
                        android:textColor="@color/logoblack"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:autoLink="all"
                        android:text="@string/kisahdakwah"
                        android:textSize="15sp"
                        android:textStyle="normal"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:text="\nBaca Kisah Lebih Lengkap:"
                        android:textColor="@color/logoblack"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:autoLink="all"
                        android:text="@string/bacalanjutan"
                        android:textSize="15sp"
                        android:textStyle="normal"
                        />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>

</LinearLayout>